# pbplus

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  i686-w64-mingw32-gcc.cmake  pbplus.sample.ini
.github/workflows/: main.yml
contrib/: run.py
src/: config.cpp  config.hpp  console.cpp  console.hpp  game.hpp  global_proxy.hpp  globals.hpp  hooks.cpp  hooks.hpp  main.cpp  util.hpp
src/detours/: detours.h  hde.h
src/detours/hde32/: hde32.cpp
